k3s/stickies/client-deploy.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stickies-external-service
  namespace: default
spec:
  ports:
    - name: web
      port: 23010
      targetPort: 23010
      protocol: TCP
  type: ClusterIP

---
# endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: stickies-external-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.4.102
    ports:
      - name: web
        port: 23010
        protocol: TCP

---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stickies-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: stickies.carter2099.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stickies-external-service
                port:
                  number: 23010
