k3s/stickies/stickies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stickies-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service.external.name: host.k3d.internal
    traefik.ingress.kubernetes.io/service.external.port: "3010"
spec:
  rules:
  - host: stickies.carter2099.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stickies-external-service  # This is just a placeholder
            port:
              number: 3010
